// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NEW and EDIT <CreatedTime /> 1`] = `
<div
  className="MuiFormControl-root MuiFormControl-fullWidth"
>
  <div
    className="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal"
    format="yyyy-MM-dd HH:mm:ss OOOO"
    onClick={[Function]}
    onKeyDown={[Function]}
    readOnly={false}
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
      data-shrink={false}
      htmlFor="created_time"
      id="created_time-label"
    >
      Created Time
    </label>
    <div
      className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
      onClick={[Function]}
    >
      <input
        aria-describedby="created_time-helper-text"
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiInput-input"
        disabled={false}
        id="created_time"
        name="created_time"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        required={false}
        type="text"
        value="2021-07-22 09:00:00 GMT-04:00"
      />
    </div>
    <p
      className="MuiFormHelperText-root"
      id="created_time-helper-text"
    >
      Timestamp of DRS Object creation in ISO 8601 format.
    </p>
  </div>
</div>
`;

exports[`SHOW <CreatedTime />  1`] = `
<div
  className="MuiFormControl-root MuiFormControl-fullWidth"
>
  <div
    className="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal"
    format="yyyy-MM-dd HH:mm:ss OOOO"
    onClick={[Function]}
    onKeyDown={[Function]}
    readOnly={true}
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
      data-shrink={true}
      htmlFor="created_time"
      id="created_time-label"
    >
      Created Time
    </label>
    <div
      className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
      onClick={[Function]}
    >
      <input
        aria-describedby="created_time-helper-text"
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiInput-input"
        disabled={false}
        id="created_time"
        name="created_time"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        required={false}
        type="text"
        value="2021-07-22 09:00:00 GMT-04:00"
      />
    </div>
    <p
      className="MuiFormHelperText-root MuiFormHelperText-filled"
      id="created_time-helper-text"
    >
      Timestamp of DRS Object creation in ISO 8601 format.
    </p>
  </div>
</div>
`;
